# gstack

./: .editorconfig  .env.example  .foxguard.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .osv-scanner.toml  .shellcheckrc  AGENTS.md  ARCHITECTURE.md  BROWSER.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSS_PLATFORM_ANALYSIS.md  CROSS_PLATFORM_CONTRIBUTING.md  CROSS_PLATFORM_MIGRATION.md  CROSS_PLATFORM_QUICK_REFERENCE.md  CROSS_PLATFORM_SUMMARY.md  DESIGN.md  DUTIES.md  ETHOS.md  EXAMPLE_BROWSE_UPDATE.ts  EXAMPLE_MAKE_PDF_UPDATE.ts  GEMINI.md  GSTACK_PLAYBOOK.md  LICENSE  LOCAL_PATCHES.md  PLAN-qa-headless.md  PREAMBLE-BLOAT-NOTES.md  README.fr.md  README.md  RULES.md  SECURITY.md  SKILL.md  SKILL.md.tmpl  SOUL.md  TODO.md  TODOS.md  (+18 more)
.agents/: ANTIGRAVITY.md
.brief-data/: .gitkeep
.claude/: settings.json
.claude-plugin/: marketplace.json
.crew/: config.md
.devcontainer/: Dockerfile  devcontainer.json  link-skills.sh  setup-gstack.sh
.foxguard/: baseline.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  ammor-roadmap-automation.json  copilot-instructions.md  dependabot.yml  renovate.json5
.next/: trace  trace-build
.omc/: project-memory.json
a11y/: SKILL.md  SKILL.md.tmpl
plugins/bams-plugin/tools/bams-widget/tauri/src-tauri/: Cargo.toml  tauri.conf.json
plugins/bams-plugin/tools/bams-widget/tauri/src-tauri/capabilities/: default.json
plugins/bams-plugin/tools/bams-widget/tauri/src-tauri/icons/: icon.icns
plugins/bams-plugin/tools/bams-widget/tauri/src-tauri/src/: lib.rs  main.rs  sidecar.rs  tray.rs
(+2932 files in other folders)
